# serializer version: 1
# name: TestCreate.test_ok[group]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: TestCreate.test_ok[pg]
  <SQLGroup(id=1, legacy_id=None, name=Test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>
# ---
# name: TestFind.test_pagination[False]
  list([
    GroupMinimal(id=1, legacy_id=None, name='test 1'),
    GroupMinimal(id=2, legacy_id=None, name='test 2'),
  ])
# ---
# name: TestFind.test_pagination[True]
  dict({
    'found_count': 2,
    'items': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'test 1',
      }),
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'test 2',
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestFind.test_search[1]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'test 1',
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestFind.test_search[2]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'test 2',
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestFind.test_search[]
  dict({
    'found_count': 2,
    'items': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'test 1',
      }),
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'test 2',
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestFind.test_search[re]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestFind.test_search[te]
  dict({
    'found_count': 2,
    'items': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'test 1',
      }),
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'test 2',
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: TestGet.test_ok
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'musicians',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
      dict({
        'handle': 'laura56',
        'id': 'bf1b993c',
      }),
      dict({
        'handle': 'sjohnson',
        'id': 'fb085f7f',
      }),
    ]),
  })
# ---
# name: test_update_name[group_after]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Renamed',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_update_name[group_before]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_update_name[pg_after]
  <SQLGroup(id=1, legacy_id=None, name=Renamed, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>
# ---
# name: test_update_name[pg_before]
  <SQLGroup(id=1, legacy_id=None, name=Test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>
# ---
# name: test_update_permissions[group_added]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_update_permissions[group_before]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_update_permissions[group_removed]
  dict({
    'id': 1,
    'legacy_id': None,
    'name': 'Test',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'users': list([
    ]),
  })
# ---
# name: test_update_permissions[pg_added]
  <SQLGroup(id=1, legacy_id=None, name=Test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': True, 'modify_subtraction': True})>
# ---
# name: test_update_permissions[pg_before]
  <SQLGroup(id=1, legacy_id=None, name=Test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>
# ---
# name: test_update_permissions[pg_removed]
  <SQLGroup(id=1, legacy_id=None, name=Test, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': True})>
# ---
